# dvoratt

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  deny.toml
.github/workflows/: _cargo-audit.yml  ci-compatibility-matrix.yml  ci-essentials.yml  essentials.yml  large-scope.yml  release.yml  schedule-renovate.yml  schedule-supply-chain.yml
ci/: test_full.sh
src/: app.rs  main.rs  ui.rs  word_lists.rs  word_queue.rs
src/performance/: fastest_slowest_words.rs  mod.rs  performance_tracker.rs  problem_words.rs  struggle_combinations.rs  word_speed_tracker.rs
