# Dvorak Typing Practice CLI App
[package]
name = "dvoratt"
version = "0.1.4"
edition = "2024"
rust-version = "1.95"
description = "Dvorak Typing Practice Terminal App"
documentation = "https://docs.rs/dvoratt"
readme = "README.md"
homepage = "https://github.com/graelo/dvoratt"
repository = "https://github.com/graelo/dvoratt"
license = "MIT"
keywords = ["app", "cli", "dvorak", "practice", "terminal", "typing"]
categories = ["terminal"]
exclude = ["/.github"]

[dependencies]
anyhow = "1.0"
crossterm = "0.29.0"
flate2 = "1.0.33"
rand = "0.10.1"
ratatui = "0.30"
serde_json = "1.0"
